fix minor compilation issues